Fix double border in settings menu
Closes #80

- Swap from first-child to first-of-type, to get around Ember metamorph tags

--- a/sass/layouts/settings.scss
+++ b/sass/layouts/settings.scss
@@ -131,10 +131,8 @@
             }
         }
 
-        &:first-child {
-            border-top: none;
-        }
-        &:first-child.active {
+        &:first-of-type,
+        &:first-of-type.active, {
             border-top: none;
         }
 
